--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 
     <!-- about -->
     <section class="about" id="about">
-      <div class="max-width">
+      <div class="mak-width">
         <div class="about-content">
           <div class="tittle">
             <h2>About Me <br /><span></span></h2>
           </div>
           <div class="about-me">
-            <div class="about-img">
+            <!-- <div class="about-img">
               <img src="img/sigmund-a19OVaa2rzA-unsplash.jpg" alt="" />
-            </div>
+            </div> -->
             <div class="about-me-content">
               <h2>I'm Afrizal and i'm a <span class="typing-2"></span></h2>
               <p>
@@ -347,7 +347,7 @@
   <!-- running text-2 -->
   <script>
     var typed = new Typed(".typing-2", {
-      strings: ["Student", "Web Developer", "Designer", "Freelancer"],
+      strings: ["Student", "Designer", "Freelancer"],
       typeSpeed: 100,
       backSpeed: 60,
       loop: true,
