--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div class="jumbotron-img">
-            <img src="https://i.postimg.cc/Xv6QTLB6/400.png" alt="img" />
+            <img src="img/400.png" alt="img" />
           </div>
         </div>
       </div>
