--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div class="jumbotron-img">
-            <img src="img/400.png" alt="img" />
+            <img src="img/icon/4001.png" alt="my foto" />
           </div>
         </div>
       </div>
