--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
             </div>
           </div>
 
-          <div class="jumbotron-img">
-            <img src="img/icon/4001.png" alt="my foto" />
-          </div>
+          <div class="jumbotron-img"></div>
         </div>
       </div>
     </section>
@@ -367,7 +365,7 @@
   <script>
     ScrollReveal().reveal(".jumbotron-text .content");
     ScrollReveal().reveal(".jumbotron-text  ", { interval: 200 });
-    ScrollReveal().reveal(".jumbotron-text .icon a", { interval: 200, delay: 400 });
+    ScrollReveal().reveal(".jumbotron-text .icon a", { interval: 200, delay: 600 });
 
     ScrollReveal().reveal(".about-img");
     ScrollReveal().reveal(".about-me-content", { delay: 200 });
