--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </class>
             <div class="service-text">
               <h3>Web Design</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quod deserunt quia rerum, saepe commodi?</p>
+              <p>Lorem ipsum dolo sit amet consectetur adipisicing elit. Voluptatem quod deserunt quia rerum, saepe commodi?</p>
             </div>
           </div>
           <div class="service">
