--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             </div>
           </div>
 
-          <div class="jumbotron-img"></div>
+          <div class="jumbotron-img">
+            <img src="img/icon/4001.png" alt="my foto" />
+          </div>
         </div>
       </div>
     </section>
@@ -111,7 +113,7 @@
             </class>
             <div class="service-text">
               <h3>Web Design</h3>
-              <p>Lorem ipsum dolo sit amet consectetur adipisicing elit. Voluptatem quod deserunt quia rerum, saepe commodi?</p>
+              <p>Lorem ipsum doloro sit amet consectetur adipisicing elit. Voluptatem quod deserunt quia rerum, saepe commodi?</p>
             </div>
           </div>
           <div class="service">
@@ -365,7 +367,7 @@
   <script>
     ScrollReveal().reveal(".jumbotron-text .content");
     ScrollReveal().reveal(".jumbotron-text  ", { interval: 200 });
-    ScrollReveal().reveal(".jumbotron-text .icon a", { interval: 200, delay: 600 });
+    ScrollReveal().reveal(".jumbotron-text .icon a", { interval: 200, delay: 400 });
 
     ScrollReveal().reveal(".about-img");
     ScrollReveal().reveal(".about-me-content", { delay: 200 });
