--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
               <div class="text-3">And i'm a <span class="typing"></span></div>
               <a href="#">Click me</a>
             </div>
-            <div class="icon">
+            <!-- <div class="icon">
               <a href="https://www.facebook.com/"><img src="img/icon/facebook.png" alt="" /></a>
               <a href="https://www.instagram.com/cuingskot07/"><img src="img/icon/github.png" alt="" /></a>
               <a href="#"><img src="img/icon/linkedin.png" alt="" /></a>
-            </div>
+            </div> -->
           </div>
 
           <div class="jumbotron-img">
