--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
               <div class="text-3">And i'm a <span class="typing"></span></div>
               <a href="#">Click me</a>
             </div>
-            <!-- <div class="icon">
+            <div class="icon">
               <a href="https://www.facebook.com/"><img src="img/icon/facebook.png" alt="" /></a>
               <a href="https://www.instagram.com/cuingskot07/"><img src="img/icon/github.png" alt="" /></a>
               <a href="#"><img src="img/icon/linkedin.png" alt="" /></a>
-            </div> -->
+            </div>
           </div>
 
           <div class="jumbotron-img">
-            <img src="img/icon/4001.png" alt="my foto" />
+            <img src="img/asdf.png" alt="my foto" />
           </div>
         </div>
       </div>
