--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="jumbotron-2">
           <div class="jumbotron-text">
             <div class="jumbotron-text content">
-              <div class="text-1">Hello, my name is</div>
+              <div class="text-1">Hllo, my name is</div>
               <div class="text-2">Afrizal Setya</div>
               <div class="text-3">And i'm a <span class="typing"></span></div>
               <a href="#">Click me</a>
