bismillah jadi yo

--- a/index.html
+++ b/index.html
@@ -355,16 +355,16 @@
   </script>
 
   <!-- scroll animation -->
-  <!-- <script>
+  <script>
     const sr = ScrollReveal({
       origin: "top",
       distance: "80px",
       duration: "2000",
       reset: "true",
     });
-  </script> -->
+  </script>
   <!-- scroll jumbotron-->
-  <!-- <script>
+  <script>
     ScrollReveal().reveal(".jumbotron-text .content");
     ScrollReveal().reveal(".jumbotron-text  ", { interval: 200 });
     ScrollReveal().reveal(".jumbotron-text .icon a", { interval: 200, delay: 400 });
@@ -383,5 +383,5 @@
 
     ScrollReveal().reveal(".contact-left");
     ScrollReveal().reveal(".contact-right", { delay: 500 });
-  </script> -->
+  </script>
 </html>
