--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <a href="#">Click me</a>
             </div>
             <div class="icon">
-              <a href="https://www.facebook.com/"><img src="img/icon/facebook.png" alt="" /></a>
-              <a href="https://www.instagram.com/cuingskot07/"><img src="img/icon/github.png" alt="" /></a>
+              <a href="#"><img src="img/icon/facebook.png" alt="" /></a>
+              <a href="#"><img src="img/icon/github.png" alt="" /></a>
               <a href="#"><img src="img/icon/linkedin.png" alt="" /></a>
             </div>
           </div>
@@ -366,8 +366,9 @@
   <!-- scroll jumbotron-->
   <script>
     ScrollReveal().reveal(".jumbotron-text .content");
-    ScrollReveal().reveal(".jumbotron-text  ", { interval: 200 });
-    ScrollReveal().reveal(".jumbotron-text .icon a", { interval: 200, delay: 400 });
+    // ScrollReveal().reveal(".jumbotron-text  ", { interval: 200, delay: 500 });
+    ScrollReveal().reveal(".jumbotron-text .icon ", { interval: 200, delay: 500 });
+    ScrollReveal().reveal(".jumbotron-text .icon img", { interval: 900 });
 
     ScrollReveal().reveal(".about-img");
     ScrollReveal().reveal(".about-me-content", { delay: 200 });
